# Djassa-vibeathon

./: .dockerignore  .gitignore  Dockerfile  README.md  arborescence-gtran-mobile.md  arborescence-gtran.md  koyeb.yaml  prompts.md  ret.md  vue_g.md
.kombai/canvas/: gtran_landing.canvas
gtran-api/: .dockerignore  .env.example  Dockerfile  koyeb.yaml  pyproject.toml  requirements.txt  seed_supabase.py
gtran-api/app/: auth.py  config.py  geo.py  main.py  routers.py  schemas.py  services.py  store.py
gtran-api/app/data/: seed.py
gtran-api/app/domain/: ai_assist.py  alerts_engine.py  analytics.py  mission_profit.py  mission_workflow.py  tracking.py
gtran-api/app/websockets/: realtime.py
gtran-app/: .env.example  .gitignore  .temp-tsconfig-1783764378647-x1fdniwhr.json  index.html  package-lock.json  package.json  tsconfig.app.json
gtran-app/src/: global.d.ts  main.tsx
gtran-app/src/app/: providers.tsx  router.tsx
gtran-app/src/hooks/: use-data.ts
gtran-app/src/lib/: ai-assist-engine.ts  dashboard-stats.ts  export.ts  mission-profit.ts  mock-data.ts  navigation.ts  utils.ts
gtran-app/src/styles/: globals.css
gtran-app/src/types/: entities.ts  globals.d.ts  motion-react.d.ts  shared.ts  vite-client.d.ts
gtran-mobile/: .env.example  README.md  app.json  metro.config.js  package-lock.json  package.json
gtran-mobile/app/: _layout.tsx  index.tsx
gtran-mobile/app/(auth)/: login.tsx  register.tsx
gtran-mobile/app/(chauffeur)/: _layout.tsx  compte.tsx  courses.tsx  gps.tsx  index.tsx  messages.tsx
gtran-mobile/app/(driver)/: _layout.tsx  tracking.tsx
(+160 files in other folders)
