[project]
name = "gtran-api"
version = "0.1.0"
description = "Gtran — API FastAPI transport & logistique"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
